# Prototype-Elevator

esp32/: CMakeLists.txt  PINS.xlsx
esp32/Firmware/: CMakeLists.txt  Firmware.ino  Firmware.sln  Firmware.vcxproj  Firmware.vcxproj.filters  TFTLib.cpp  TFTLib.h  pins.h
esp32/Firmware/Debug/: Firmware.cpp.d  Firmware.elf  Firmware.hex  Firmware.with_bootloader.hex  TFTLib.cpp.d  board.buildinfo
esp32/Firmware/__vm/: .Firmware.vsarduino.h  Configuration.Debug.vmps.xml  Upload.vmps.xml
esp32/ressource/: icon-wifi
esp32/samples/Buzzer/: Buzzer.ino
esp32/samples/CLOCK/: Arduino Playground - DS1302.html
esp32/samples/CLOCK/Arduino Playground - DS1302_files/: 300lo.json  Nh1oH0K63yz.html  arduinoWide_SSO.css  count.json  fastbutton.html  like.html  loader.js.téléchargement  pinit.html  plusone.js.téléchargement  postmessageRelay.html  rpc_shindig_random.js.téléchargement  sdk.js.téléchargement  sh.d663e43787b663d5491cf753.html  tweet_button.2e798283373a8137c24e277b9b9620d6.en.html  widget_iframe.2e798283373a8137c24e277b9b9620d6.html
esp32/samples/CLOCK/CLOCK.ino/: CLOCK.ino.ino
esp32/samples/CLOCK/DS1302RTC/DS1302RTC/: DS1302RTC.h
esp32/samples/DISTANCE/: DISTANCE.ino
esp32/samples/TFT/Adafruit_SSD1331_OLED_Driver_Library_for_Arduino/: Adafruit_SSD1331.cpp
esp32/samples/TFT/TFT.ino/: TFT.ino.ino
esp32/samples/TFT/TFTLib/: TFTLib.ino
